--- a/papers/icra13/bib/bibliography.bib
+++ b/papers/icra13/bib/bibliography.bib
@@ -4285,6 +4285,21 @@
   timestamp = {2011.09.19}
 }
 
+@ARTICLE{kaess09covariance,
+  author = {Michael Kaess and Frank Dellaert},
+  title = {Covariance Recovery from a Square Root Information Matrix for Data
+	Association},
+  journal = {Robotics and Autonomous Systems (RAS)},
+  year = {2009},
+  volume = {57},
+  pages = {1198-1210},
+  number = {12},
+  month = {December},
+  file = {kaess09covariance.pdf:kaess09covariance.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.09.16}
+}
+
 @INPROCEEDINGS{kaestner10bayesian,
   author = {Ralf Kaestner and Nikolas Engelhard and Rudolph Triebel and Roland
 	Siegwart},
@@ -4715,6 +4730,17 @@
   owner = {jmaye},
   pdf = {kschischang01factor.pdf},
   timestamp = {2011.09.16}
+}
+
+@INPROCEEDINGS{kuemmerle11simultaneous,
+  author = {Rainer Kuemmerle and Giorgio Grisetti and Wolfram Burgard},
+  title = {Simultaneous Calibration, Localization, and Mapping},
+  booktitle = {Proc. of the IEEE/RSJ International Conference on Intelligent Robots
+	and Systems (IROS)},
+  year = {2011},
+  file = {kuemmerle11simultaneous.pdf:kuemmerle11simultaneous.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.09.16}
 }
 
 @INPROCEEDINGS{kuettel10what,
@@ -5655,6 +5681,32 @@
   file = {martinelli06automatic.pdf:martinelli06automatic.pdf:PDF},
   owner = {jmaye},
   timestamp = {2012.09.13}
+}
+
+@ARTICLE{martinelli07simultaneous,
+  author = {Agostino Martinelli and Nicola Tomatis and Roland Siegwart},
+  title = {Simultaneous localization and odometry self calibration for mobile
+	robot},
+  journal = {Autonomous Robots},
+  year = {2007},
+  volume = {22},
+  pages = {75-85},
+  number = {1},
+  month = {January},
+  file = {martinelli07simultaneous.pdf:martinelli07simultaneous.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.09.16}
+}
+
+@INPROCEEDINGS{martinelli06theoretical,
+  author = {Agostino Martinelli and Jan Weingarten and Roland Siegwart},
+  title = {Theoretical Results on On-line Sensor Self-Calibration},
+  booktitle = {Proc. of the IEEE/RSJ International Conference on Intelligent Robots
+	and Systems (IROS)},
+  year = {2006},
+  file = {martinelli06theoretical.pdf:martinelli06theoretical.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.09.16}
 }
 
 @INPROCEEDINGS{matei08building,
@@ -8055,6 +8107,18 @@
   timestamp = {2010.03.09}
 }
 
+@INPROCEEDINGS{sturm99plane,
+  author = {Peter F. Sturm and Stephen J. Maybank},
+  title = {On plane-based camera calibration: A general algorithm, singularities,
+	applications},
+  booktitle = {Proc. of the 12th IEEE Conference on Computer Vision and Pattern
+	Recognition (CVPR)},
+  year = {1999},
+  file = {sturm99plane.pdf:sturm99plane.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.09.16}
+}
+
 @INPROCEEDINGS{su09learning,
   author = {Hao Su and Min Sun and Li Fei-Fei and Silvio Savarese},
   title = {Learning a dense multi-view representation for detection, viewpoint
@@ -9363,6 +9427,17 @@
   file = {zhang08effective.pdf:zhang08effective.pdf:PDF},
   owner = {jmaye},
   timestamp = {2011.11.09}
+}
+
+@INPROCEEDINGS{zhang99flexible,
+  author = {Zhengyou Zhang},
+  title = {Flexible Camera Calibration By Viewing a Plane From Unknown Orientations},
+  booktitle = {Proc. of the 7th IEEE International Conference on Computer Vision
+	(ICCV)},
+  year = {1999},
+  file = {zhang99flexible.pdf:zhang99flexible.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.09.16}
 }
 
 @ARTICLE{zhang11extended,
