--- a/papers/icra13/src/model.tex
+++ b/papers/icra13/src/model.tex
@@ -31,16 +31,16 @@ $\boldsymbol{\Theta}$ given all the measurements up to timestep $K$,
 According to~\cite{durrantwhyte06simultaneous}, the full joint posterior on the
 right-hand side of \eqref{eqn:post_calib} may further be factorized into
 
-\begin{equation}\label{eqn:post_joint_factorized}
-  \begin{aligned}
+\begin{multline}\label{eqn:post_joint_factorized}
+%  \begin{aligned}
   p(\boldsymbol{\Theta}, \mathcal{X},
-    \mathcal{L} \mid\mathcal{U},\mathcal{Z}) &\propto\\
+    \mathcal{L} \mid\mathcal{U},\mathcal{Z}) \propto\\
     p(\boldsymbol{\Theta}, \mathbf{x}_0,\mathcal{L})
     \prod_{k=1}^K p(\mathbf{x}_k\mid\mathbf{x}_{k - 1},\mathbf{u}_k)
     \prod_{k=1}^K\prod_{i=1}^N p(\mathbf{z}_{k_i}\mid\mathbf{x}_k,
     \mathbf{l}_i,\boldsymbol{\Theta}).
-  \end{aligned}
-\end{equation}
+%  \end{aligned}
+\end{multline}
 
 We may approximate \eqref{eqn:post_joint_factorized} with a normal distribution
 whose mean, $\boldsymbol{\mu}_{\boldsymbol{\Theta}\mathcal{X}\mathcal{L}}$, and
@@ -171,8 +171,9 @@ Singular Value Decomposition (\emph{SVD}) decomposition
   \end{aligned}
 \end{equation}
 
-\noindent where $\mathbf{U}_n$ is $m\times n$, $\mathbf{S}_n=\diag(\sigma_1,
-\cdots,\sigma_n)$, $\mathbf{V}_n$ is $n\times n$, and $\sigma_i$ are the
+\noindent where $\mathbf{U}_n$ is an $m\times n$ matrix with orthogonal columns,
+$\mathbf{S}_n=\diag(\sigma_1, \cdots,\sigma_n)$, $\mathbf{V}_n$ an $n\times n$
+matrix with orthogonal columns, and $\sigma_i$ are the
 singular values of $\mathbf{L}\mathbf{H}$.
 
 From \eqref{eqn:svd_decomposition} and using the orthogonality of
@@ -217,7 +218,7 @@ From \eqref{eqn:qr_decomposition} and using the orthogonality of $\mathbf{Q}_n$,
   \end{aligned}
 \end{equation}
 
-\noindent which, due the upper triangular form of $\mathbf{R}_n$ can be easily
+\noindent which, due the upper triangular form of $\mathbf{R}_n$, can be easily
 solved by \emph{back substitution}.
 
 The $\mathbf{R}_n$ matrix can be used to compute the FIM and its
@@ -307,10 +308,11 @@ FIM might appear to be theoretically full rank although it is actually
 \end{equation}
 
 Although being full rank, $\mathbf{A}$ was constructed from a rank deficient
-matrix with added Gaussian noise. In the following, we will coin $\mathbf{A}$
+matrix (the second row is a linear combination of the first and the last row)
+with added Gaussian noise. In the following, we will coin $\mathbf{A}$
 a nearly rank deficient matrix. The issue of rank deficiency often appears in
 robotics state estimation and is related to the problem of \emph{observability}
-in the control theory.
+in control theory.
 
 Using SVD decomposition, we can identify a nearly rank deficient matrix by
 analyzing its singular values. The \emph{numerical rank} $r$ of a matrix is
@@ -335,11 +337,15 @@ lower rank matrix yielding the \emph{Truncated} SVD (TSVD) solution
   \delta\hat{\boldsymbol{\mu}}_{\boldsymbol{\Theta}\mathcal{X}\mathcal{L}}^
     {(TSVD)} &=
     -\mathbf{V}_r\mathbf{S}_r^{-1}\mathbf{U}_r^T
-    \mathbf{e}(
+    \mathbf{L}\mathbf{e}(
     \mathbf{\hat{\boldsymbol{\mu}}_{
-    \boldsymbol{\Theta}\mathcal{X}\mathcal{L}}}).
+    \boldsymbol{\Theta}\mathcal{X}\mathcal{L}}}),
   \end{aligned}
 \end{equation}
+
+\noindent with $\mathbf{U}_r$ an $m\times r$ matrix,
+$\mathbf{S}_r=\diag(\sigma_1, \cdots,\sigma_r)$, $\mathbf{V}_r$ an $n\times r$
+matrix.
 
 It is worth noting that TSVD applies a \emph{sharp} filter to the system,
 whereas \emph{regularization} methods such as Tikhonov or ridge regression work
@@ -355,7 +361,7 @@ posterior $p(\boldsymbol{\Theta}\mid\mathcal{U},\mathcal{Z})$, we do not need
 to consider all measurements. Let us define a partition of the measurements
 $\mathcal{D}_1=\{\mathbf{u}_{1:i}, \mathbf{z}_{1_{1:N}:i_{1:N}}\}$ and
 $\mathcal{D}_2=\{\mathbf{u}_{i+1:K}, \mathbf{z}_{i+1_{1:N}:K_{1:N}}\}$ with
-$i<K$. Using the information theory, we can quantify the information gain when
+$i<K$. Using information theory, we can quantify the information gain when
 estimating $\boldsymbol{\Theta}$ with $\mathcal{D}_1$ alone or with
 $\mathcal{D}_1$ and $\mathcal{D}_2$.
 
@@ -369,8 +375,8 @@ $\mathbf{Y}$ is defined as
   \end{aligned}
 \end{equation}
 
-where $p(x, y)$ is the joint density of $\mathbf{X}$ and $\mathbf{Y}$, and
-$p(x)$ and $p(x)$ their marginal densities. The MI measures the amount of
+\noindent where $p(x, y)$ is the joint density of $\mathbf{X}$ and $\mathbf{Y}$,
+and $p(x)$ and $p(x)$ their marginal densities. The MI measures the amount of
 information $\mathbf{X}$ and $\mathbf{Y}$ share or, in other words, quantifies
 the reduction of uncertainty in $\mathbf{X}$ when knowing $\mathbf{Y}$.
 
@@ -396,8 +402,8 @@ normal distribution $p(\mathbf{\Theta}_1,\mathcal{D}_2)$ with parameters
   \end{aligned}
 \end{equation}
 
-then $p(\mathbf{\Theta}_1\mid\mathcal{D}_2)$ is a normal distribution with
-parameters
+\noindent then $p(\mathbf{\Theta}_1\mid\mathcal{D}_2)$ is a normal distribution
+with parameters
 
 \begin{equation}\label{eqn:joint_conditional}
   \begin{aligned}
@@ -437,7 +443,7 @@ The MI between $\mathbf{\Theta}_1$ and $\mathcal{D}_2$ can be computed as
   \end{aligned}
 \end{equation}
 
-where $|\cdot|$ is the matrix determinant.
+\noindent where $|\cdot|$ denotes the matrix determinant.
 
 Thus, using \eqref{eqn:mi_normal}, we can measure the amount of information
 $\mathcal{D}_2$ conveys to our current estimate
