--- a/papers/icra13/src/related.tex
+++ b/papers/icra13/src/related.tex
@@ -28,11 +28,13 @@ problem in a state-space estimation framework,
 either as filtering~\cite{martinelli06automatic}, or
 smoothing~\cite{kuemmerle11simultaneous}.
 
-List of papers to cite: \cite{davis11algorithm},
-\cite{brookshire12extrinsic}, \cite{aster11parameter}, \cite{brookshire11automatic},
+Last class of approach: \cite{brookshire12extrinsic}, \cite{brookshire11automatic}, \cite{maddern12lost},
+\cite{sheehan12self}, \cite{sheehan10automatic}, \cite{levinson10unsupervised}, \cite{gao10online},
+\cite{hol10modeling},
+
+Theoretical citations: \cite{davis11algorithm}, \cite{aster11parameter},
 \cite{chan94lowrank}, \cite{finsterle11truncated}, \cite{golub96matrix},
 \cite{hansen87truncated}, \cite{hong92rank}, \cite{jauffret07observability},
-\cite{kitagawa01regularization}, \cite{levinson10unsupervised},
-\cite{mackay05information}, \cite{maddern12lost},
-\cite{sheehan12self}, \cite{sheehan10automatic},
-\cite{gao10online}, \cite{hol10modeling}, \cite{kaess09covariance}
+\cite{kitagawa01regularization},
+\cite{mackay05information}, 
+ \cite{kaess09covariance}
