--- a/papers/icra13/src/related.tex
+++ b/papers/icra13/src/related.tex
@@ -23,14 +23,20 @@ efficient, this procedure still requires expert knowledge to reach a good level
 of accuracy. It can also be quite inconvenient on a mobile platform requiring
 frequent recalibration.
 
-In the context of mobile robotics, several authors have included the calibration
-problem in a state-space estimation framework,
-either as filtering~\cite{martinelli06automatic}, or
-smoothing~\cite{kuemmerle11simultaneous}.
+In an effort to automate the process in the context of mobile robotics, several
+authors have included the calibration problem in a state-space estimation
+framework, either with filtering~\cite{martinelli06automatic} or
+smoothing~\cite{kuemmerle11simultaneous} techniques. Filtering techniques based
+on the Kalman filter are appealing due to their inherently online nature.
+However, in case of nonlinear systems, smoothing techniques based on iterative
+optimization are usually superior in terms of accuracy. While building on this
+latter method, our approach attempts to reduce its computational load and cope
+with degenerate cases.
 
-Last class of approach: \cite{brookshire12extrinsic}, \cite{brookshire11automatic}, \cite{maddern12lost},
-\cite{sheehan12self}, \cite{sheehan10automatic}, \cite{levinson10unsupervised}, \cite{gao10online},
-\cite{hol10modeling},
+
+
+Last class of approach: \cite{brookshire12extrinsic}, \cite{gao10online},
+\cite{sheehan12self}, \cite{levinson10unsupervised},
 
 Theoretical citations: \cite{davis11algorithm}, \cite{aster11parameter},
 \cite{chan94lowrank}, \cite{finsterle11truncated}, \cite{golub96matrix},
