--- a/papers/icra13/bib/bibliography.bib
+++ b/papers/icra13/bib/bibliography.bib
@@ -1918,6 +1918,17 @@
   timestamp = {2012.09.13}
 }
 
+@INPROCEEDINGS{davison05active,
+  author = {Andrew J. Davison},
+  title = {Active Search for Real-Time Vision},
+  booktitle = {Proc. of the 10th IEEE International Conference on Computer Vision
+	(ICCV)},
+  year = {2005},
+  file = {davison05active.pdf:davison05active.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.09.17}
+}
+
 @ARTICLE{davy10generative,
   author = {Manuel Davy and Jean-Yves Tourneret},
   title = {Generative Supervised Classification Using Dirichlet Process Priors},
@@ -8713,6 +8724,21 @@
   file = {varadarajan10probabilistic.pdf:varadarajan10probabilistic.pdf:PDF},
   owner = {jmaye},
   timestamp = {2010.12.13}
+}
+
+@ARTICLE{varah73numerical,
+  author = {J. M. Varah},
+  title = {On the Numerical Solution of Ill-Conditioned Linear Systems with
+	Applications to Ill-Posed Problems},
+  journal = {SIAM Journal on Numerical Analysis},
+  year = {1973},
+  volume = {10},
+  pages = {257-267},
+  number = {2},
+  month = {April},
+  file = {varah73numerical.pdf:varah73numerical.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.09.17}
 }
 
 @INPROCEEDINGS{vasquez07incremental,
