--- a/papers/icra13/src/model.tex
+++ b/papers/icra13/src/model.tex
@@ -1,12 +1,17 @@
+In this section, we will first state our problem in a probabilistic manner and
+present the mathematical groundings of our method. A practical algorithmic
+sketch will conclude the presentation.
+
 \subsection{Problem Formulation\label{subsec:prob}}
 
-In the following, we outline our problem in a probabilistic manner, closely
-following the discrete-time Simultaneous Localization and Mapping (SLAM)
-formulation~\cite{durrantwhyte06simultaneous}. For the sake of clarity, we
+In the following, we borrow the formalism of the probabilistic discrete-time
+Simultaneous Localization and Mapping (SLAM)
+model~\cite{durrantwhyte06simultaneous}. For the sake of clarity, we
 consider here a robot with a single sensor observing a known number of landmarks
 at each timestep. Furthermore, we assume the correspondences between sensor's
-measurements and landmarks are known. The relaxation of these assumptions goes
-beyond the scope of this paper.
+measurements and landmarks are known. While this latter assumption involves data
+association techniques which go beyond the scope of this paper, the extension to
+multiple sensors is straightforward.
 
 Let
 $\mathcal{X}=\{\mathbf{x}_{0:K}\}$ be a set of \emph{latent} random variables
@@ -28,25 +33,23 @@ $\boldsymbol{\Theta}$ given all the measurements up to timestep $K$,
   \end{aligned}
 \end{equation}
 
-According to~\cite{durrantwhyte06simultaneous}, the full joint posterior on the
-right-hand side of \eqref{eqn:post_calib} may further be factorized into
+\noindent Following~\cite{durrantwhyte06simultaneous}, the full joint posterior
+on the right-hand side of \eqref{eqn:post_calib} may further be factorized into
 
 \begin{multline}\label{eqn:post_joint_factorized}
-%  \begin{aligned}
   p(\boldsymbol{\Theta}, \mathcal{X},
     \mathcal{L} \mid\mathcal{U},\mathcal{Z}) \propto\\
     p(\boldsymbol{\Theta}, \mathbf{x}_0,\mathcal{L})
     \prod_{k=1}^K p(\mathbf{x}_k\mid\mathbf{x}_{k - 1},\mathbf{u}_k)
     \prod_{k=1}^K\prod_{i=1}^N p(\mathbf{z}_{k_i}\mid\mathbf{x}_k,
     \mathbf{l}_i,\boldsymbol{\Theta}).
-%  \end{aligned}
 \end{multline}
 
-We may approximate \eqref{eqn:post_joint_factorized} with a normal distribution
-whose mean, $\boldsymbol{\mu}_{\boldsymbol{\Theta}\mathcal{X}\mathcal{L}}$, and
-covariance, $\boldsymbol{\Sigma}_{\boldsymbol{\Theta}\mathcal{X}\mathcal{L}}$,
-have to be estimated. To this end, we first derive a Maximum a Posteriori (MAP)
-estimator for the mean,
+\noindent We may then approximate \eqref{eqn:post_joint_factorized} with a
+normal distribution whose mean, $\boldsymbol{\mu}_{\boldsymbol{\Theta}
+\mathcal{X}\mathcal{L}}$, and covariance, $\boldsymbol{\Sigma}_
+{\boldsymbol{\Theta}\mathcal{X}\mathcal{L}}$, have to be estimated. To this end,
+we first derive a Maximum a Posteriori (MAP) estimator for the mean,
 
 \begin{equation}\label{eqn:map_estimator}
   \begin{aligned}
@@ -94,7 +97,7 @@ solution to \eqref{eqn:map_estimator} based on the \emph{least squares} method
 due to the normally distributed noise variables. In the other case, one can
 resort to non-linear least squares methods that iteratively solve a linearized
 version of the problem. In the following, we employ the \emph{Gauss-Newton}
-algorithm for this purpose.
+algorithm~\cite{aster11parameter} for this purpose.
 
 From \eqref{eqn:map_estimator} and the normal approximations, we can turn the
 MAP problem into the minimization of a sum of quadratic functions. Non-linear
@@ -163,7 +166,7 @@ significant amount of computation and introduces numerical errors, we can take
 advantage of matrix decompositions.
 
 Let $\mathbf{L}\mathbf{H}$ be of size $m\times n$ with the following thin
-Singular Value Decomposition (\emph{SVD}) decomposition
+Singular Value Decomposition (\emph{SVD}) decomposition~\cite{golub96matrix}
 
 \begin{equation}\label{eqn:svd_decomposition}
   \begin{aligned}
@@ -192,7 +195,8 @@ $\mathbf{U}_n$ and $\mathbf{V}_n$, we can solve \eqref{eqn:dx_update} as
 
 Although useful for illustrating the concepts of our approach, the SVD
 decomposition can be computationally demanding for large matrices. In practice,
-we therefore use the thin \emph{QR} decomposition of $\mathbf{L}\mathbf{H}$
+we therefore use the thin \emph{QR} decomposition~\cite{golub96matrix} of
+$\mathbf{L}\mathbf{H}$
 
 \begin{equation}\label{eqn:qr_decomposition}
   \begin{aligned}
@@ -202,7 +206,8 @@ we therefore use the thin \emph{QR} decomposition of $\mathbf{L}\mathbf{H}$
 
 \noindent where $\boldsymbol{\Pi}$ is a permutation matrix, $\mathbf{Q}_n$ an
 $m\times n$ matrix with orthogonal columns, and $\mathbf{R}_n$ an $n\times n$
-upper triangular matrix.
+upper triangular matrix. In standard QR decomposition, $\boldsymbol{\Pi}$ is
+the identity matrix, otherwise it reflects column pivoting.
 
 From \eqref{eqn:qr_decomposition} and using the orthogonality of $\mathbf{Q}_n$,
 \eqref{eqn:dx_update} can be expressed as
@@ -221,15 +226,15 @@ From \eqref{eqn:qr_decomposition} and using the orthogonality of $\mathbf{Q}_n$,
 \noindent which, due the upper triangular form of $\mathbf{R}_n$, can be easily
 solved by \emph{back substitution}.
 
-The $\mathbf{R}_n$ matrix can be used to compute the FIM and its
-inverse the covariance estimate
+The $\mathbf{R}_n$ matrix can also be used to compute the FIM and its
+inverse, the covariance estimate
 $\hat{\boldsymbol{\Sigma}}_{\boldsymbol{\Theta}\mathcal{X}\mathcal{L}}$. If we
 drop the permutation matrix for clarity, the FIM becomes
 $\mathbf{R}_n^T\mathbf{R}_n$. Let $\sigma_{ij}$ denote the elements of
 $\hat{\boldsymbol{\Sigma}}_{\boldsymbol{\Theta}\mathcal{X}\mathcal{L}}$ and
 $r_{ij}$ the elements of $\mathbf{R}_n$, there exists an
-efficient algorithm for recovering any elements of the covariance estimate
-without inverting the whole FIM
+efficient algorithm~\cite{kaess09covariance} for recovering any elements of the
+covariance estimate without inverting the whole FIM
 
 \begin{equation}\label{eqn:covariance_QR}
   \begin{aligned}
@@ -310,11 +315,11 @@ FIM might appear to be theoretically full rank although it is actually
 Although being full rank, $\mathbf{A}$ was constructed from a rank deficient
 matrix (the second row is a linear combination of the first and the last row)
 with added Gaussian noise. In the following, we will coin $\mathbf{A}$
-a nearly rank deficient matrix. The issue of rank deficiency often appears in
-robotics state estimation and is related to the problem of \emph{observability}
-in control theory.
+a \emph{numerically rank deficient} matrix. The issue of rank deficiency often
+appears in robotics state estimation and is related to the problem of
+\emph{observability} in control theory~\cite{jauffret07observability}.
 
-Using SVD decomposition, we can identify a nearly rank deficient matrix by
+Using SVD decomposition, we can identify a numerically rank deficient matrix by
 analyzing its singular values. The \emph{numerical rank} $r$ of a matrix is
 defined as the index of its smallest singular value $\sigma_r$ larger than
 a user-defined tolerance $\epsilon$, i.e.,
@@ -330,7 +335,8 @@ close to zero, i.e. $r<n$, the update vector
 $\delta\hat{\boldsymbol{\mu}}_{\boldsymbol{\Theta}\mathcal{X}\mathcal{L}}^
 {(SVD)}$ will be large and eventually lead to a divergence of the solution. In
 order to cope with this issue, we can approximate $\mathbf{L}\mathbf{H}$ with a
-lower rank matrix yielding the \emph{Truncated} SVD (TSVD) solution
+lower rank matrix yielding the \emph{Truncated} SVD
+(TSVD)~\cite{varah73numerical} solution
 
 \begin{equation}\label{eqn:dx_tsvd_solve}
   \begin{aligned}
@@ -349,10 +355,16 @@ matrix.
 
 It is worth noting that TSVD applies a \emph{sharp} filter to the system,
 whereas \emph{regularization} methods such as Tikhonov or ridge regression work
-as a \emph{smooth} filter.
+as a \emph{smooth} filter~\cite{hansen87truncated}.
 
-A similar approach can be derived using \emph{rank-revealing} QR decomposition
-yielding to the Truncated QR (TQR) method.
+A similar approach can be derived using \emph{rank-revealing} QR
+decomposition~\cite{hong92rank} yielding to the Truncated QR (TQR)
+method~\cite{kitagawa01regularization}. The strategy is to apply QR
+factorization with column pivoting in order to reveal the rank and to apply a
+cutoff on the diagonal of the $\mathbf{R}$ matrix. It can further be noted that
+the $\mathbf{Q}$ matrix need not be explicitly constructed, but instead returned
+in the form of \emph{Householder} reflections that can be applied on the
+right-hand side of the linear system.
 
 \subsection{Selecting Informative Measurements}
 
@@ -365,8 +377,8 @@ $i<K$. Using information theory, we can quantify the information gain when
 estimating $\boldsymbol{\Theta}$ with $\mathcal{D}_1$ alone or with
 $\mathcal{D}_1$ and $\mathcal{D}_2$.
 
-The \emph{mutual information} (MI) between two random variables $\mathbf{X}$ and
-$\mathbf{Y}$ is defined as
+The \emph{mutual information} (MI)~\cite{mackay05information} between two random
+variables $\mathbf{X}$ and $\mathbf{Y}$ is defined as
 
 \begin{equation}\label{eqn:mi_definition}
   \begin{aligned}
@@ -424,7 +436,8 @@ Furthermore, $\boldsymbol{\Sigma}_{\boldsymbol{\Theta}_1\mid\mathcal{D}_2}$ can
 be recognized as the \emph{Schur complement} of the joint covariance matrix
 $\boldsymbol{\Sigma}_{\boldsymbol{\Theta}_1\mathcal{D}_2}$.
 
-The MI between $\mathbf{\Theta}_1$ and $\mathcal{D}_2$ can be computed as
+Following an argument of~\cite{davison05active}, the MI between
+$\mathbf{\Theta}_1$ and $\mathcal{D}_2$ can then be computed as
 
 \begin{equation}\label{eqn:mi_normal}
   \begin{aligned}
@@ -514,4 +527,5 @@ $t\leftarrow1$ \;
 Our method has been fully implemented in MATLAB. Taking into account the
 sparsity of the Jacobian matrix $\mathbf{H}$, the algorithmic complexity can
 be largely reduced in terms of memory footprint and computation. To this end, we
-have used the SuiteSparseQR package for performing TQR optimization.
+have used the SuiteSparseQR~\cite{davis11algorithm} package for performing
+TQR optimization.
