update some stuff

--- a/papers/icra13/main.tex
+++ b/papers/icra13/main.tex
@@ -15,6 +15,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{cite}
 \usepackage[ruled,lined]{algorithm2e}
+\usepackage{todonotes}
 
 \usetikzlibrary{shapes,decorations,shadows}
 \usetikzlibrary{decorations.pathmorphing}
@@ -45,6 +46,7 @@ factor/.style={rectangle, fill=gray!25,minimum size=15pt, inner sep=1pt,draw=bla
 \DeclareMathOperator{\diag}{diag}
 \DeclareMathOperator{\rank}{rank}
 \DeclareMathOperator{\card}{card}
+\DeclareMathOperator{\atan2}{atan2}
 
 \begin{document}
 
