--- a/papers/icra13/src/model.tex
+++ b/papers/icra13/src/model.tex
@@ -462,7 +462,7 @@ Thus, using \eqref{eqn:mi_normal}, we can measure the amount of information
 $\mathcal{D}_2$ conveys to our current estimate
 $\boldsymbol{\Theta}\mid\mathcal{D}_1$.
 
-\subsection{Implementation Details}
+\subsection{Algorithm}
 
 Thus far, we have delivered a formal introduction to the probabilistic
 groundings of our self-supervised calibration approach. This section will be
