--- a/papers/icra13/main.tex
+++ b/papers/icra13/main.tex
@@ -11,7 +11,7 @@
 \usepackage{amsfonts}
 \usepackage{txfonts}
 \usepackage{tikz}
-\usepackage{sty/tkz-base}
+%\usepackage{sty/tkz-base}
 \usepackage[T1]{fontenc}
 \usepackage{cite}
 \usepackage[ruled,lined]{algorithm2e}
