--- a/papers/icra13/src/conclusion.tex
+++ b/papers/icra13/src/conclusion.tex
@@ -1,1 +1,6 @@
 In this paper, we have presented a novel approach to ...
+
+%%% Local Variables: 
+%%% mode: latex
+%%% TeX-master: "../main"
+%%% End: 
