--- a/papers/icra13/src/model.tex
+++ b/papers/icra13/src/model.tex
@@ -68,7 +68,7 @@ model
 \begin{equation}\label{eqn:process_model}
   \begin{aligned}
   \mathbf{x}_k &= \mathbf{h}(\mathbf{x}_{k-1}, \mathbf{u}_k, \mathbf{w}_k)\\
-  \mathbf{z}_{k_i} &= \mathbf{g}(\mathbf{x}_{k}, \mathbf{l}_i,
+  \mathbf{z}_{k_i} &= \mathbf{g}(\mathbf{x}_{k}, \boldsymbol{\ell}_i,
     \boldsymbol{\Theta}, \mathbf{n}_k),
   \end{aligned}
 \end{equation}
