--- a/papers/icra13/bib/bibliography.bib
+++ b/papers/icra13/bib/bibliography.bib
@@ -4132,6 +4132,15 @@
   timestamp = {2012.09.13}
 }
 
+@BOOK{jazwinski70stochastic,
+  title = {Stochastic Processes and Filtering Theory},
+  publisher = {Academic Press},
+  year = {1970},
+  author = {A. H. Jazwinski},
+  owner = {jmaye},
+  timestamp = {2012.09.17}
+}
+
 @INPROCEEDINGS{ji10towards,
   author = {Rongrong Ji and Hongxun Yao and Xiaoshuai Sun and Bineng Zhong and
 	Wen Gao},
@@ -4474,6 +4483,18 @@
   owner = {jmaye},
   pdf = {khan09tracking.pdf},
   timestamp = {2010.03.11}
+}
+
+@ARTICLE{kim06absolute,
+  author = {Jae-Hean Kim and Myung Jin Chung},
+  title = {Absolute motion and structure from stereo image sequences without
+	stereo correspondence and analysis of degenerate cases},
+  journal = {Pattern Recognition},
+  year = {2006},
+  volume = {39},
+  pages = {1649-1661},
+  owner = {jmaye},
+  timestamp = {2012.09.17}
 }
 
 @ARTICLE{kim09discriminative,
@@ -4843,6 +4864,17 @@
   owner = {jmaye},
   pdf = {kwon10visual.pdf},
   timestamp = {2010.08.04}
+}
+
+@INPROCEEDINGS{lebraly10calibration,
+  author = {Pierre L\'ebraly and Eric Royer and Omar Ait-Aider and Michel Dhome},
+  title = {Calibration of Non-Overlapping Cameras - Application to Vision-Based
+	Robotics},
+  booktitle = {Proc. of the 21st British Machine Vision Conference (BMVC)},
+  year = {2010},
+  file = {lebraly10calibration.pdf:lebraly10calibration.pdf:PDF},
+  owner = {jmaye},
+  timestamp = {2012.09.17}
 }
 
 @INPROCEEDINGS{ladicky09associative,
@@ -9527,42 +9559,3 @@
   timestamp = {2010.03.11}
 }
 
-@book{hansen1998rank,
-  title={Rank-deficient and discrete ill-posed problems: numerical aspects of linear inversion},
-  author={Hansen, P.C.},
-  number={4},
-  year={1998},
-  publisher={Society for Industrial Mathematics}
-}
-
-@book{jazwinski1970stochastic,
-	Address = {New York, NY, USA},
-	Author = {Andrew H. Jazwinski},
-	Date-Added = {2011-05-22 18:20:27 -0400},
-	Date-Modified = {2011-05-22 18:23:28 -0400},
-	Publisher = {Academic Press, Inc},
-	Title = {Stochastic Processes and Filtering Theory},
-	Year = {1970}}
-
-@inproceedings{lebraly2010calibration,
-   title = {Calibration of Non-Overlapping Cameras - Application to Vision-Based Robotics},
-   author = {L\'ebraly, Pierre and Royer, Eric and Ait-Aider, Omar and Dhome, Michel},
-   year = {2010},
-   pages = {10.1--10.12},
-   booktitle = {Proceedings of the British Machine Vision Conference},
-   publisher = {BMVA Press},
-   editors = {Labrosse, Fr\'ed\'eric and Zwiggelaar, Reyer and Liu, Yonghuai and Tiddeman, Bernie},
-   isbn = {1-901725-40-5},
-   note = {doi:10.5244/C.24.10}
-}
-
-@article{kim2006absolute,
-  title={Absolute motion and structure from stereo image sequences without stereo correspondence and analysis of degenerate cases},
-  author={Kim, J.H. and Chung, M.J.},
-  journal={Pattern recognition},
-  volume={39},
-  number={9},
-  pages={1649--1661},
-  year={2006},
-  publisher={Elsevier}
-}
