--- a/papers/icra13/src/introduction.tex
+++ b/papers/icra13/src/introduction.tex
@@ -48,6 +48,18 @@ degenerate case), noise in the measurements can make unobservable parameters
 appear observable. We call these parameters {\em numerically unobservable} to
 mirror the related concept of numerically rank-deficient matrices.
 
+\begin{figure}[t]
+\centering
+\includegraphics[width=\columnwidth]{fig/slam_calib_it3.eps}
+\caption{Exemplary output of our calibration algorithm (best viewed in
+color). The ground truth trajectory and landmark positions are shown in green
+and their respective estimates in blue. While dealing with degenerate cases, our
+method only selects batches of data that provide enough information to the
+estimator. In this example, the observed shift in the estimate comes from the
+absence of any prior information.}
+\label{fig:calib_demo}
+\end{figure}
+
 Existing algorithms for self calibration generally handle issues (1) and (2).
 Issue (3) is dealt with by designing experiments that guarantee all parameters
 become observable. To the best of our knowledge, no published self-calibration
@@ -58,7 +70,7 @@ required.
 
 In this paper, we propose an algorithm to deal with {\em all} of these
 difficulties. Our approach exploits the algebraic links between the Gauss-Newton
-algorithm, the Fischer Information Matrix, and nonlinear observability analysis
+algorithm, the Fisher Information Matrix, and nonlinear observability analysis
 to automatically detect directions in parameter space that are numerically
 unobservable and avoid updating our parameters in these directions; at any given
 time, parts of the parameter space that are observable will be updated based on
@@ -71,18 +83,6 @@ The only requirement is that it is possible to implement a batch Gauss-Newton
 estimator for the system state and calibration parameters based on a set of
 measurements. Fig.~\ref{fig:calib_demo} shows a typical calibration run of our
 algorithm.
-
-\begin{figure}[t]
-\centering
-\includegraphics[width=\columnwidth]{fig/slam_calib_it3.eps}
-\caption{Exemplary output of our calibration algorithm (best viewed in
-color). The ground truth trajectory and landmark positions are shown in green
-and their respective estimates in blue. While dealing with degenerate cases, our
-method only selects batches of data that provide enough information to the
-estimator. In this example, the observed shift in the estimate comes from the
-absence of any prior information.}
-\label{fig:calib_demo}
-\end{figure}
 
 The remainder of the paper is structured as follows. Section~\ref{sec:rel}
 will give a brief overview over related approaches. Section~\ref{sec:model} is
