update some stuff

--- a/papers/icra13/bib/bibliography.bib
+++ b/papers/icra13/bib/bibliography.bib
@@ -3665,6 +3665,16 @@
   timestamp = {2011.11.14}
 }
 
+@BOOK{hansen98rank,
+  title = {Rank-Deficient and Discrete Ill-Posed Problems: Numerical Aspects
+	of Linear Inversion},
+  publisher = {Society for Industrial and Applied Mathematics (SIAM)},
+  year = {1998},
+  author = {Per Christian Hansen},
+  owner = {jmaye},
+  timestamp = {2012.09.18}
+}
+
 @ARTICLE{hansen87truncated,
   author = {Per Christian Hansen},
   title = {The truncated {SVD} as a method for regularization},
