--- a/papers/icra13/src/model.tex
+++ b/papers/icra13/src/model.tex
@@ -318,7 +318,7 @@ appears in robotics state estimation and is related to the problem of
 \emph{observability} in control theory~\cite{jauffret07observability}.
 
 Using SVD decomposition, we can identify a numerically rank deficient matrix by
-analyzing its singular values \cite{hansen1998rank}. The \emph{numerical rank}
+analyzing its singular values \cite{hansen98rank}. The \emph{numerical rank}
 $r$ of a matrix is defined as the index of its smallest singular value
 $\sigma_r$ larger than a user-defined tolerance $\epsilon$, i.e.,
 
@@ -354,7 +354,8 @@ matrix.
 
 It is worth noting that TSVD applies a \emph{sharp} filter to the system,
 whereas \emph{regularization} methods such as Tikhonov or ridge regression work
-as a \emph{smooth} filter~\cite{hansen87truncated}.
+as a \emph{smooth} filter. As shown in~\cite{hansen87truncated}, it produces
+similar results at lower computational costs.
 
 A similar approach can be derived using \emph{rank-revealing} QR
 decomposition~\cite{hong92rank} yielding to the Truncated QR (TQR)
