--- a/papers/icra13/bib/bibliography.bib
+++ b/papers/icra13/bib/bibliography.bib
@@ -4147,6 +4147,7 @@
   publisher = {Academic Press},
   year = {1970},
   author = {A. H. Jazwinski},
+  file = {jazwinski70stochastic.pdf:jazwinski70stochastic.pdf:PDF},
   owner = {jmaye},
   timestamp = {2012.09.17}
 }
@@ -4503,6 +4504,7 @@
   year = {2006},
   volume = {39},
   pages = {1649-1661},
+  file = {kim06absolute.pdf:kim06absolute.pdf:PDF},
   owner = {jmaye},
   timestamp = {2012.09.17}
 }
