--- a/papers/icra13/src/experiments.tex
+++ b/papers/icra13/src/experiments.tex
@@ -95,7 +95,7 @@ times, maintaining identical initial conditions over the different runs, and
 monitored the convergence of the calibration parameters.
 Fig.~\ref{fig:straight_comp} shows the performance of different algorithms,
 namely an Extended Kalman Filter (EKF) similar to~\cite{martinelli06automatic},
-a standard batch nonlinear least squares method without
+a standard batch non-linear least squares method without
 regularization~\cite{kuemmerle11simultaneous}, and our TQR-MI approach.
 
 \todo{more text to come discussing the results}
