--- a/papers/icra13/src/model.tex
+++ b/papers/icra13/src/model.tex
@@ -534,4 +534,4 @@ Our method has been fully implemented in MATLAB. Taking into account the
 sparsity of the Jacobian matrix $\mathbf{H}$, the algorithmic complexity can
 be largely reduced in terms of memory footprint and computation. To this end, we
 have used the SuiteSparseQR~\cite{davis11algorithm} package for performing
-TQR optimization.
+TQR optimization.\todo{a note on the algorithmic complexity}
